--- a/example/index.html
+++ b/example/index.html
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
 <div id="root"></div>
 
 <script src="./index.js"></script>
