--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"><link rel="stylesheet" href="/examples.e6c1735f.css"><div id="root"></div><script src="/examples.2af8ce8f.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"><link rel="stylesheet" href="/qaf/examples.e6c1735f.css"><div id="root"></div><script src="/qaf/examples.66e8efb2.js"></script>
