--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"><link rel="stylesheet" href="/qaf/examples.3dd97c0a.css"><div id="root"></div><script src="/qaf/examples.05a8a0fb.js"></script>
+<link rel="stylesheet" href="/qaf/examples.781f2298.css"><div id="root"></div><script src="/qaf/examples.647d8a82.js"></script>
