--- a/examples/index.html
+++ b/examples/index.html
@@ -1,3 +1,28 @@
-<div id="root"></div>
+<!--<!DOCTYPE html> -->
+<html lang="en">
 
-<script src="./index.js"></script>
+<head>
+  <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#61dafb">
+  <meta name="description" content="Qaf examples.">
+
+  <link rel="manifest" href="static/manifest.webmanifest">
+  <link rel="shortcut icon" href="static/favicon.ico">
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="static/style.css" rel="stylesheet">
+
+  <title>Qaf - Examples</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+
+  <div id="root"></div>
+
+  <script src="index.js"></script>
+</body>
+
+</html>
