--- a/examples/App/index.html
+++ b/examples/App/index.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#61dafb">
-  <meta name="description" content="Qaf examples.">
+  <meta name="description" content="Examples of how to use Qaf.">
 
   <link rel="manifest" href="static/manifest.webmanifest">
   <link rel="shortcut icon" href="static/favicon.ico">
