--- a/next/public/index.html
+++ b/next/public/index.html
@@ -1,1 +1,20 @@
+<style>
+  html,
+  body,
+  #root {
+    height: 100%;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  #root {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+</style>
+
 <div id="root"></div>
